--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <version>0.10.7</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.tomitribe</groupId>
+            <artifactId>tomitribe-http-signatures</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
