--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>9.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.3.61</version>
+        </dependency>
 
 
     </dependencies>
