redo op cert, fix token id claim

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ build/
 *.p12
 *.jks
 src/main/resources/readMe.txt
-/src/main/resources/spankki-tls-publickey.crt
+src/main/resources/spankki.properties
+*.crt
